fix(TextInput): update placeholder logic to show empty string when activeLabel is true for better UX style(TextInput.module.scss): increase z-index of label for proper stacking context and ensure visibility

--- a/src/components/input/text_input/TextInput.module.scss
+++ b/src/components/input/text_input/TextInput.module.scss
@@ -14,10 +14,11 @@
     position: absolute;
     top: 50%;
     left: spacing.$spacer-md;
-    z-index: 1;
+    z-index: 2;
     background-color: theme.$background-color-primary;
     transform: translateY(-50%);
     padding: 0 spacing.$spacer-xxs;
+    display: block;
   }
 }
 
@@ -33,6 +34,8 @@
   border-radius: theme.$button-border-radius;
   background-color: theme.$background-color-primary;
   color: theme.$text-primary;
+  position: relative;
+  z-index: 1;
 
   // when no content in the input and not focused, display the label as the placeholder
   &:focus ~ label,
